WD-82 Updated sidebar options - removed filter - converted `Todo` to `Projects`

--- a/src/app/translations/translations.json
+++ b/src/app/translations/translations.json
@@ -1,12 +1,10 @@
 {
   "en": {
     "app.home": "Home",
-    "app.todo": "Todo",
-    "app.filter": "Filter"
+    "app.projects": "Projects"
   },
   "it": {
     "app.home": "Casa",
-    "app.todo": "Fare",
-    "app.filter": "Filtro"
+    "app.projects": "Progetti"
   }
 }
