added skeleton of portal route

--- a/src/app/translations/translations.json
+++ b/src/app/translations/translations.json
@@ -3,6 +3,7 @@
     "app.backToHome": "Go back to Home",
     "app.aboutme": "About me",
     "app.resume": "Resume",
+    "app.portal": "Portal",
     "app.projects": "Projects",
     "app.language": "Language",
     "app.english": "English",
@@ -12,6 +13,7 @@
     "app.backToHome": "Torna a casa",
     "app.aboutme": "A proposito di me",
     "app.resume": "Curriculum vitae",
+    "app.portal": "Portale",
     "app.projects": "Progetti",
     "app.language": "Lingua",
     "app.english": "Inglese",
