--- a/src/app/translations/translations.json
+++ b/src/app/translations/translations.json
@@ -2,19 +2,17 @@
   "en": {
     "app.backToHome": "Go back to Home",
     "app.aboutme": "About me",
-    "app.resume": "Resume",
     "app.projects": "Projects",
     "app.language": "Language",
     "app.english": "English",
-    "app.italian": "Italian"
+    "app.french": "French"
   },
-  "it": {
-    "app.backToHome": "Torna a casa",
-    "app.aboutme": "A proposito di me",
-    "app.resume": "Curriculum vitae",
-    "app.projects": "Progetti",
-    "app.language": "Lingua",
-    "app.english": "Inglese",
-    "app.italian": "Italiano"
+  "fr": {
+    "app.backToHome": "Retour à la page d'accueil",
+    "app.aboutme": "À propos de moi",
+    "app.projects": "Des projets",
+    "app.language": "La langue",
+    "app.english": "Anglais",
+    "app.french": "Français"
   }
 }
